--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>แปลงเศษส่วนเป็นทศนิยม</title>
+    <link rel="icon" type="image/png" href="https://img2.pic.in.th/pic/-1d866e1b6906965dd.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap" rel="stylesheet');
         :root {
@@ -311,4 +312,5 @@
 
     </script>
 </body>
+
 </html>
